--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-    "name"       : "rhinojs-support",
-    "description": "rhinoJS Support Components",
-    "version"    : "0.0.2",
-    "keywords"   : ["rhinojs", "framework", "support", "components"],
-    "author"     : "Bruno Goncalves",
-    "license"    : "MIT",
+    "name"        : "rhinojs-support",
+    "description" : "rhinoJS Support Components",
+    "version"     : "0.0.2",
 
-    "repository": {
-        "type" : "git",
+    "keywords"    : [
+        "rhinojs", "framework", "support", "components"
+    ],
+
+    "author"      : "Bruno Goncalves",
+    "license"     : "MIT",
+
+    "repository"  : {
+        "type": "git",
         "url" : "https://github.com/rhinoJS/support.git"
     },
 
-    "main": "bootstrap.js"
+    "main"        : "bootstrap.js",
+
+    "dependencies": {
+        "randomstring": "^1.1.5"
+    }
 }
