--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
 
     "dependencies": {
         "randomstring": "^1.1.5"
+    },
+
+    "scripts"        : {
+        "deploy"     : "npm publish . --access-public"
     }
 }
