--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
     "name"        : "rhinojs-support",
     "description" : "rhinoJS Support Components",
-    "version"     : "0.0.2",
-
-    "keywords"    : [
-        "rhinojs", "framework", "support", "components"
-    ],
+    "version"     : "0.0.3",
+    "keywords"    : [ "rhinojs", "framework", "support", "components" ],
 
     "author"      : "Bruno Goncalves",
     "license"     : "MIT",
