--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "git@github.com:rhinoJS/support.git"
+        "url": "https://github.com/rhinoJS/support.git"
     },
     "dependencies": {
         "randomstring": "^1.1.5"
