--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@rhinojs/support",
     "description": "rhinoJS Support Components",
-    "version": "0.1.14",
+    "version": "0.1.20",
     "keywords": [
         "rhinojs",
         "framework",
@@ -14,6 +14,7 @@
         "type": "git",
         "url": "git@github.com:rhinoJS/support.git"
     },
+    "main": "./src/index.js",
     "dependencies": {
         "randomstring": "^1.1.5"
     }
